src/app/styles/index.scss
@import 'reset';
@import 'variables/global';
@import 'themes/normal';
@import 'themes/dark';

@font-face {
  font-family: 'SF Pro Display';
  font-weight: 200;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-thin.woff2') format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-thin.woff') format('woff');
}
@font-face {
  font-family: 'SF Pro Display';
  font-weight: 300;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-light.woff2')
      format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-light.woff') format('woff');
}
@font-face {
  font-family: 'SF Pro Display';
  font-weight: 400;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-regular.woff2')
      format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-regular.woff')
      format('woff');
}
@font-face {
  font-family: 'SF Pro Display';
  font-weight: 500;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-medium.woff2')
      format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-medium.woff') format('woff');
}
@font-face {
  font-family: 'SF Pro Display';
  font-weight: 600;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-semibold.woff2')
      format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-semibold.woff')
      format('woff');
}
@font-face {
  font-family: 'SF Pro Display';
  font-weight: 700;
  src: local('SF Pro Display'),
    url('./../../shared/assets/fonts/sf-pro-display-bold.woff2') format('woff2'),
    url('./../../shared/assets/fonts/sf-pro-display-bold.woff') format('woff');
}
@font-face {
  font-family: 'SF UI Text';
  font-weight: 400;
  src: local('SF UI Text'),
    url('./../../shared/assets/fonts/sf-ui-text-regular.woff2') format('woff2'),
    url('./../../shared/assets/fonts/sf-ui-text-regular.woff') format('woff');
}
@font-face {
  font-family: 'SF UI Text';
  font-weight: 600;
  src: local('SF UI Text'),
    url('./../../shared/assets/fonts/sf-ui-text-bold.woff2') format('woff2'),
    url('./../../shared/assets/fonts/sf-ui-text-bold.woff') format('woff');
}
@font-face {
  font-family: 'SF Mono';
  font-weight: 400;
  src: local('SF Mono'),
    url('./../../shared/assets/fonts/sf-mono-regular.woff2') format('woff2'),
    url('./../../shared/assets/fonts/sf-mono-regular.woff') format('woff');
}

body {
  font-size: 16px;
  font-family: var(--font-family-main);
  overflow-anchor: none;

  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.app {
  background: var(--bg-color);
  color: var(--main-text-color);
  min-height: 100%;
}

.content-page {
  position: relative;
  height: calc(100vh - 44px);
  width: 100%;
  &.full .page-wrapper {
    left: 0px;
    border-left: 1px solid transparent;
  }
  &.notDesktop {
    height: calc(100vh - 94px);
    & .page-wrapper {
      left: 0px;
      position: relative;
      border-left: none;
    }
  }
}
.page-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  height: 100%;
  left: var(--sidebar-with);
  border-left: 1px solid var(--border-color);
  transition: left 0.25s;
  background: var(--bg-color);
  position: absolute;
  right: 0;
}

@media screen and (max-width: 666px) {
  .content-page {
    &.notDesktop {
      height: calc(100vh - 44px);
    }
  }
}
@media not all and (min-resolution: 0.001dpcm) {
  .content-page {
    &.notDesktop {
      height: calc(100vh - 144px);
    }
  }
}

